--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -222,16 +222,16 @@ td{border-width:0 1px;}
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
 body{color:#8A8A8A; background-color:#27292C;}
-a{color:#FF866C;}
+a{color:#ff0164;}
 a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
 hr, .borderedbox{border-color:#D7D7D7;}
 label span{color:#FF0000; background-color:inherit;}
-input:focus, textarea:focus, *:required:focus{border-color:#FF866C;}
+input:focus, textarea:focus, *:required:focus{border-color:#ff0164;}
 .overlay{color:#FFFFFF; background-color:inherit;}
 .overlay::after{color:inherit; background-color:rgba(0,0,0,.55);}
-.overlay.coloured::after{color:inherit; background-color:rgba(255,134,108,.8);}/* #FF866C */
+.overlay.coloured::after{color:inherit; background-color:rgba(0, 182, 255, 0.84);}/* #ff0164 */
 
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#FF866C; border-color:#FF866C;}
+.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#00b6ff; border-color:#ff0164;}
 .btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
 
 
@@ -250,8 +250,8 @@ input:focus, textarea:focus, *:required:focus{border-color:#FF866C;}
 
 
 /* CTA */
-#cta .btn, #cta .btn.inverse:hover{color:#FFFFFF; background-color:#2b37dc; border-color:#FFFFFF;}
-#cta .btn:hover, #cta .btn.inverse{color:#FF866C; background-color:#FFFFFF; border-color:#FF866C;}
+#cta .btn, #cta .btn.inverse:hover{color:#ff0164; background-color:#FFFFFF; border-color:#ff0164;}
+#cta .btn:hover, #cta .btn.inverse{color:#FFFFFF; background-color:#ff0164; border-color:#FFFFFF;}
 
 
 /* Content Area */
@@ -264,8 +264,8 @@ input:focus, textarea:focus, *:required:focus{border-color:#FF866C;}
 
 #footer input, #footer button{border-color:transparent;}
 #footer input{color:#FFFFFF; background-color:#393C40;}
-#footer input:focus{border-color:#FF866C;}
-#footer button{color:#FFFFFF; background-color:#FF866C;}
+#footer input:focus{border-color:#ff0164;}
+#footer button{color:#FFFFFF; background-color:#ff0164;}
 
 
 /* Copyright */
@@ -274,26 +274,26 @@ input:focus, textarea:focus, *:required:focus{border-color:#FF866C;}
 
 /* Navigation */
 #mainav li a{color:inherit;}
-#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#FF866C; background-color:inherit;}
+#mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#ff0164; background-color:inherit;}
 #mainav li li a, #mainav .active li a{color:#FFFFFF; background-color:rgba(0,0,0,.6); border-color:rgba(0,0,0,.6);}
-#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#FF866C;}
+#mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#ff0164;}
 #mainav form select{color:#FFFFFF; background-color:#393C40;}
 
 #breadcrumb a{color:inherit; background-color:transparent;}
 #breadcrumb li:last-child a{}
 
 .container .sidebar nav a{color:inherit; border-color:#D7D7D7;}
-.container .sidebar nav a:hover{color:#FF866C;}
+.container .sidebar nav a:hover{color:#ff0164;}
 
 .pagination a, .pagination strong{border-color:#D7D7D7;}
-.pagination .current *{color:#FFFFFF; background-color:#FF866C;}
+.pagination .current *{color:#FFFFFF; background-color:#ff0164;}
 
-#backtotop{color:#FFFFFF; background-color:#FF866C;}
+#backtotop{color:#FFFFFF; background-color:#ff0164;}
 
 
 /* Tables + Comments */
 table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}
-#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#FF866C;}
+#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#ff0164;}
 th{color:#FFFFFF; background-color:#373737;}
 tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:#FBFBFB;}
 tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F7F7F7;}
